update for final version, following reviewer comments and added author names and did some clearning up

--- a/smartgreens/Orpheus_SmartGreens.bib
+++ b/smartgreens/Orpheus_SmartGreens.bib
@@ -41,18 +41,18 @@
   language={english}
 }
 
-@misc{infraplan,
-  title={{INFRA-PLAN}},
-  year={2013},
-  howpublished={Project},
-  note={Available from http:www.infra-plan.eu}
+@article{infraplan, 
+  title={(In German) Analyse der M{\"o}glichkeiten f{\"u}r die Umsetzung von Hybridnetzen (Strom, Gas, W{\"a}rme) in st{\"a}dtischen Ballungsgebieten der DA-CH Region},
+  author={Hinterberger, Robert and Kleimaier, Martin},
+  journal={Internationale Energiewirtschaftstagung an der TU Wien. Wien},
+  year={2013}
 }
 
-@misc{etransport,
-  title={{eTransport}},
-  year={2014},
-  howpublished={Simulation Tool},
-  note={Available from http://www.sintef.com/home/projects/sintef-energy-research/etransport/}
+@techreport{etransport,
+  title={eTransport. A novel tool for energy system planning},
+  author={Bakken, Bjoern Harald and Wolfgang, Ove and Roeynstrand, Jarand and Frydenlund, Frode and Skjelbred, Hans Ivar},
+  year={2006},
+  institution={SINTEF Energiforskning AS}
 }
 
 @article{trebolle_2010,
