updated ack comment

--- a/smartgreens/Orpheus_SmartGreens.tex
+++ b/smartgreens/Orpheus_SmartGreens.tex
@@ -674,8 +674,8 @@ horizons. % for only within the planning horizon.
 % investigation results from control-strategy evaluation to clarify what
 % can be safely projected within its model as technologically sound.  
 
-\section{\uppercase{Holistic Investigation on the Impact of Hybrid Grid and
-  Co-operative Control Strategy}}
+\section{\uppercase{Holistic Investigation on the Impact of Hybrid Grids and  Co-operative Control Strategy
+}}
 \label{sec:hol} 
 \noindent
 The investigation process as whole can be now explored, with the two
@@ -840,7 +840,22 @@ insights for the possible future energy grid evolution.
 \section*{Acknowledgment}
 \noindent
 We gratefully acknowledge funding and support by the European
-Commission (project OrPHEuS (FP7 ICT-608930)).  
+Commission (project OrPHEuS (FP7 ICT-608930)). The sole
+responsibility for the content of this publication lies with the
+authors. 
+%It does not necessarily reflect the opinion of the European
+%Commission. 
+The European Commission is not responsible for any use that
+may be made of the information contained therein.
+%It does not necessarily reflect the opinion of the European
+%Commission. 
+
+%\footnote{The sole
+%responsibility for the content of this publication lies with the
+%authors. It does not necessarily reflect the opinion of the European
+%Commission.}. 
+% The European Commission is not responsible for any use
+% that may be made of the information contained therein.}.
 % This work has been done within EU FP7 OrPHEuS project. The OrPHEuS
 % project is co-financed by the European Commission under the 7th
 % Framework Programme. The sole responsibility for the content of this
